<resources>
    <string name="app_name">BLE_Guitar_Tutor</string>

    <!-- BLE 관련 문자열 리소스 -->
    <string name="ble_denied_info">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="please_wait">Please Wait...</string>

    <!-- BLE String Communication Test Strings -->
    <string name="test_string_1">080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,</string>
    <string name="test_string_2">080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,</string>
    <string name="test_string_3">080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,</string>
    <string name="test_string_4">080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,</string>
    <string name="test_string_5">080!Q1,8-4,10-@Q1,7-4,9-@Q1,5-4,7-@Q1,3-4,5-@Q1,1-4,3-@Q1,0-4,2-@Q2,3-4,0-@Q2,1-5,3-@Q0,0-@H1,1-2,1-3,2-4,3-5,3-6,1-@H0,0-@W1,3-2,3-3,4-4,5-5,5-6,3-@Q1,3-2,3-3,4-4,5-5,5-6,3-@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@Q4,2-@E2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q6,1-@q6,3-@q6,3-4,0-@q6,3-3,0-@q5,2-2,0-@q5,2-4,0-@q5,2-3,0-@Q5,2-2,0-@E5,2-2,0-@E5,2-3,2-@E5,3-3,2-@S5,3-3,2-@S5,3-3,0-@q5,3-3,0-@q5,3-4,3-@q5,3-4,2-@Q5,3-4,2-@Q6,3-5,3@q5,3-@q5,3-4,2-@q5,3-3,0-@q4,2-2,1-@q4,2-3,0-@q4,2-2,1-@Q4,2-1,0-@E4,2-1,0-@E4,2-2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q5,0-@q6,3-@q6,3-5,2-@q6,3-4,0-@q6,3-3,0-@q6,3-5,2-@q6,3-4,0-@q5,3-@q5,3-4,2-@q5,3-3,0-@q5,3-2,1-@q5,3-4,2-@q5,3-3,0-@S6,3-3,0-@S6,3-3,2-@S6,3-3,0-@S6,3-4,4-@S6,3-3,0-@E6,3-3,0-2,0-1,0-@S6,3-3,0-2,0-1,0-@S6,3-3,0-2,3-1,0-@Q5,3-3,0-2,1-@Q0,0-@S5,3-@S5,3-3,0-@S5,3-4,2-@S5,3-3,0-@S5,3-2,1-@S5,3-3,0-@S5,3-4,2-@S5,3-3,0-@Q4,2-1,0-@E4,2-1,0-@E4,2-2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q6,1-@S6,3-@S6,3-4,0-@S6,3-5,2-@S6,3-4,0-@S6,3-3,0-@S6,3-4,0-@S6,3-5,2-@S6,3-4,0-@Q5,2-2,0-@E5,2-2,0-@E5,2-3,2-@E5,3-3,2-@S5,3-3,2-@S5,3-3,0-@q5,3-3,0-@q5,3-4,3-@q5,3-4,2-@Q5,3-4,2-@Q6,3-5,3@S5,3-@S5,3-3,0-@S5,3-4,2-@S5,3-3,0-@S5,3-2,1-@S5,3-3,0-@S5,3-4,2-@S5,3-3,0-@Q4,2-1,0-@E4,2-1,0-@E4,2-2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q6,1-@S6,3-@S6,3-5,2-@S6,3-4,0-@S6,3-3,0-@S6,3-2,0-@S6,3-4,0-@S6,3-3,0-@S6,3-2,0-@S5,3-4,2-@S5,3-3,0-@S5,3-2,1-@S5,3-1,0-@S5,3-3,0-@S5,3-2,1-@S5,3-1,0-@S6,3-3,0-@S6,3-3,2-@S6,3-3,0-@S6,3-4,4-@S6,3-3,0-@E6,3-3,0-2,0-1,0-@S6,3-3,0-2,0-1,0-@S6,3-3,0-2,3-1,0-@Q5,3-3,0-2,1-@Q0,0-@E5,3-@E5,3-3,0-@E5,3-4,2-@E5,3-3,0-@Q4,2-1,0-@E4,2-1,0-@E4,2-2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q6,1-@E6,3-@E6,3-3,0-@E6,3-4,0-@E6,3-3,0-@Q5,2-2,0-@E5,2-2,0-@E5,2-3,2-@E5,3-3,2-@S5,3-3,2-@S5,3-3,0-@q5,3-3,0-@q5,3-4,3-@q5,3-4,2-@Q5,3-4,2-@Q6,3-5,3@E5,3-@E5,3-3,0-@E5,3-4,2-@E5,3-3,0-@Q4,2-1,0-@E4,2-1,0-@E4,2-2,3-@E4,3-2,3-@S4,3-2,3-@S4,3-2,1-@q4,3-2,1-@q4,3-2,0-@q4,3-3,2-@Q4,3-3,2-@Q6,1-@E6,3-@E6,3-5,2-@E6,3-4,0-@E6,3-3,0-@E5,3-@E5,3-4,2-@E5,3-3,0-@E5,3-2,1-@Q5,2-4,0-3,0-@E6,3-1,0-@S6,3-1,0-@S6,3-2,3-@Q5,3-4,2-3,0-2,1-@Q0,0-@q5,3-@q5,3-3,0-@q5,3-2,1-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,0-1,1-@q4,0-1,0-@q4,0-2,3-@q4,3-3,2-@q4,3-3,2-@q4,3-3,2-@q4,3-3,2-@q4,3-3,2-@q4,3-3,2-@q6,1-3,2-@q6,1-3,2-@q6,1-3,2-@q6,3-@q6,3-4,0-@q6,3-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,2-2,0-@q5,3-2,0-@q5,3-3,2-@q5,3-3,0-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-4,2-@q5,3-@q5,3-3,0-@q5,3-2,1-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,2-1,0-@q4,3-1,0-@q4,3-2,3-@q4,3-1,0-@q4,0-1,1-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,7-@q4,0-1,5-@q4,0-1,3-@q3,0-2,3-@q3,0-2,3-@q3,0-2,3-@q3,0-2,3-@q3,0-2,3-@q3,0-2,3-@q3,0-2,3-@q3,0-1,0-@q3,0-2,3-@H5,3-2,1@H6,8-5,10-4,10-3,9-2,8-1,8-@</string>
</resources>